--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.6.0",
+    "@types/invariant": "^2.2.34",
     "husky": "^4.3.0",
     "size-limit": "^4.6.0",
     "tsdx": "^0.14.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "invariant": "^2.2.4"
   }
 }
