feat: make test work

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "lint": "tsdx lint --fix",
+    "test": "tsdx test",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
