--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "yarn build && dockwalloper publish -d ./build -k iznvycpGEZpxoNwRozaFqQnhiEzc47LUYlnraP9PPx7qhfSa",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
